--- a/package.json
+++ b/package.json
@@ -4,21 +4,31 @@
   "version": "0.0.0",
   "type": "module",
   "scripts": {
+    "test": "npm run ci:format",
     "dev": "vite",
     "build": "tsc && vite build",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "format": "prettier --write .",
+    "ci:format": "prettier --check .",
+    "lint": "eslint ./src",
+    "lint:fix": "eslint --fix ./src",
+    "prepare": "husky install"
   },
   "devDependencies": {
     "@typescript-eslint/eslint-plugin": "^7.1.1",
     "@typescript-eslint/parser": "^7.1.1",
     "autoprefixer": "^10.4.18",
     "eslint": "^8.57.0",
+    "eslint-config-airbnb-typescript": "^18.0.0",
     "eslint-config-prettier": "^9.1.0",
+    "eslint-plugin-import": "^2.29.1",
     "eslint-plugin-prettier": "^5.1.3",
+    "husky": "^9.0.11",
     "modern-normalize": "^2.0.0",
     "prettier": "^3.2.5",
     "sass": "^1.71.1",
     "typescript": "^5.2.2",
+    "validate-branch-name": "^1.3.0",
     "vite": "^5.1.4"
   },
   "dependencies": {
